--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   # Data Models
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
+  uuid: ^4.5.2
 
 dev_dependencies:
   flutter_test:
