--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   json_annotation: ^4.8.1
   supabase_flutter: ^2.3.4
   uuid: ^4.5.2
+  package_info_plus: ^9.0.0
 
 dev_dependencies:
   build_runner: ^2.4.8
