--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   intl: ^0.20.2
   json_annotation: ^4.8.1
   supabase_flutter: ^2.3.4
+  url_launcher: ^6.2.0
   uuid: ^4.5.2
   package_info_plus: ^9.0.0
 
