--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   cached_network_image: ^3.4.1
   flutter:
     sdk: flutter
+  flutter_contacts: ^1.1.9+2
   flutter_svg: ^2.0.10+1
   flutter_riverpod: ^3.1.0
   freezed_annotation: ^3.1.0
