--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   cached_network_image: ^3.4.1
+  cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
   flutter_contacts: ^1.1.9+2
